Updated the adding state part

--- a/SQL_MINI_PROJECT.ipynb
+++ b/SQL_MINI_PROJECT.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "SQL MINI-PROJECT.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ0FpULbGFUEyNEZaRHkoQ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOqEhSB9zw2g+rhi2Ok4HzZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +56,7 @@
           "height": 35
         },
         "id": "l2NYNiXiVSYq",
-        "outputId": "3728123e-647b-4e37-9785-70d5582cd82e"
+        "outputId": "f25e6f60-bad1-4e2d-bfb2-8e02eb7d06ca"
       },
       "source": [
         "#load the sql extension\n",
@@ -90,7 +91,7 @@
           "height": 225
         },
         "id": "baRFml3jVvSz",
-        "outputId": "90ace9c5-aecc-447c-97f6-d64997137330"
+        "outputId": "43dad6fd-210f-4f00-9b88-5caadf6596f2"
       },
       "source": [
         "#import packages and read pandas dataframe in an sql table\n",
@@ -172,7 +173,7 @@
           "height": 225
         },
         "id": "lR8c4UbxWgZN",
-        "outputId": "a33b1415-1563-423c-f49c-fbdda5684646"
+        "outputId": "b727b995-5dd1-402c-ea61-6ea859ab1d48"
       },
       "source": [
         "#open the population csv with pandas and store and read the dataframe using sql table\n",
@@ -252,7 +253,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FA1rFOMpft8b",
-        "outputId": "566f062c-ef5c-4462-8e0e-222b87ca323b"
+        "outputId": "b673248c-fefd-48d1-a808-727cd27c7a8f"
       },
       "source": [
         "# capitalize the states in the Grand_Electors table so as to enable an inner join\n",
@@ -289,7 +290,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n4PgJ8ouXDPw",
-        "outputId": "2c6eefbc-22b6-4405-e5c1-9440832722af"
+        "outputId": "132f0a06-5bf1-4c6b-8a2d-7402f4cd72ce"
       },
       "source": [
         "%%sql\n",
@@ -330,14 +331,14 @@
           "height": 174
         },
         "id": "mfKWlXP_XDgT",
-        "outputId": "f8955795-0d3d-4fcb-f79b-247d855e9651"
+        "outputId": "668d22a8-b64a-44f3-ff03-7a9e320b4c1b"
       },
       "source": [
         "%%sql\n",
         "--view the combined table\n",
         "SELECT * FROM Combined LIMIT 5;"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +406,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -416,7 +417,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mq2s_wMGiDqF",
-        "outputId": "c3941880-e491-4c67-f748-1b8e10dba031"
+        "outputId": "eabd8929-7068-44de-f42c-6a9cb45f3199"
       },
       "source": [
         "%%sql\n",
@@ -433,7 +434,7 @@
         "--finally we will alter the new table's name and give it the name Combined\n",
         "ALTER TABLE Combined_new RENAME TO Combined;"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +457,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -468,14 +469,14 @@
           "height": 174
         },
         "id": "_XFgQZQtw1nV",
-        "outputId": "ef781b41-f5b4-4850-a1ff-ed4063341c88"
+        "outputId": "3b9d3f4e-aa26-4a22-d0f7-7b4fd8477751"
       },
       "source": [
         "%%sql\n",
         "--view the table combined\n",
         "SELECT * FROM Combined LIMIT 5;"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +538,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -557,7 +558,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "939a8bqnw7Im",
-        "outputId": "e48680e9-7d67-49ff-92e6-39cc1bf1c66a"
+        "outputId": "d3209a91-908a-4596-da2c-5a100305cec8"
       },
       "source": [
         "%%sql\n",
@@ -566,7 +567,7 @@
         "SET State='DC'\n",
         "WHERE State='DISTRICT OF COLUMBIA'"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +587,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -606,7 +607,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xVlLE74Ay__g",
-        "outputId": "d6bd0b4d-101a-49b8-f308-d6542c6a0536"
+        "outputId": "ae072d42-cfff-43d5-90a6-639ed5742f4a"
       },
       "source": [
         "%%sql\n",
@@ -619,7 +620,7 @@
         "--Rename the new table with ratio column as Combined\n",
         "ALTER TABLE Combined_new Rename to Combined;"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +642,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -653,14 +654,14 @@
           "height": 174
         },
         "id": "xAxP8H7A04ME",
-        "outputId": "18a9b818-6b57-4b61-dbe2-425ca48149a9"
+        "outputId": "a22b69b2-2982-4fbb-85ba-006c4b0e90b5"
       },
       "source": [
         "%%sql\n",
         "--Let us view the table with the new ratio column\n",
         "SELECT * FROM Combined LIMIT 5;"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,7 +729,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -748,7 +749,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lCNuN2ZcQRFC",
-        "outputId": "fa26f1ec-c407-4aad-ca18-9eba678aa482"
+        "outputId": "cd02c288-2844-44cd-8351-9ab65ad089f1"
       },
       "source": [
         "%%sql\n",
@@ -756,7 +757,7 @@
         "SELECT * FROM Combined\n",
         "ORDER BY Ratio DESC;"
       ],
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -776,7 +777,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 12
         }
       ]
     },
@@ -784,18 +785,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "Hl7tRLb6l2L1",
-        "outputId": "bb10d8c4-a390-4b22-bd93-1efca87700fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 174
-        }
+        },
+        "outputId": "545ccffa-a11d-4114-d85b-43521fa87047"
       },
       "source": [
         "%%sql\n",
         "--let us view the new table with ratio sorted in decreasing order\n",
         "SELECT * FROM Sorted LIMIT 5;"
       ],
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +864,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 13
         }
       ]
     },
@@ -883,7 +884,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7611474b-2aa1-4efd-f249-f1ebdd94983c"
+        "outputId": "5aea6910-84c6-4a9d-e440-f82a9ccc0d37"
       },
       "source": [
         "%%sql\n",
@@ -894,7 +895,7 @@
         "FROM Sorted as t\n",
         "Group By t.Ratio ORDER BY t.Ratio DESC;"
       ],
-      "execution_count": 24,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -914,7 +915,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 14
         }
       ]
     },
@@ -922,18 +923,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "BNF_RBcatixG",
-        "outputId": "adf9d566-b6c5-494f-e6c7-c2ebbe0967d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "85761414-aa93-48a7-98ec-5640a6a0b228"
       },
       "source": [
         "%%sql\n",
         "--Let us view the first 5 columns of the new table with the cummulative sum.\n",
         "SELECT * FROM Sorted_Cummulative;"
       ],
-      "execution_count": 33,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,7 +1376,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 15
         }
       ]
     },
@@ -1392,17 +1393,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "nb8IsmGHumu8",
-        "outputId": "acef6c2c-0362-49ff-d858-26579148cc2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "05758918-4307-4df6-f330-abdae4abad83"
       },
       "source": [
         "%%sql\n",
         "SELECT SUM(GrandElectors)/2 FROM Sorted_Cummulative;"
       ],
-      "execution_count": 29,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1436,7 +1437,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 16
         }
       ]
     },
@@ -1456,14 +1457,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "122f30e3-bd80-45df-91ba-dc32f31f7b63"
+        "outputId": "ddbedca7-c06e-41d6-e7c9-f91b43ab5e8b"
       },
       "source": [
         "%%sql\n",
         "CREATE TABLE Target_List AS\n",
         "SELECT * FROM Sorted_Cummulative WHERE Cummulative<=269;"
       ],
-      "execution_count": 30,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1483,7 +1484,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 17
         }
       ]
     },
@@ -1491,18 +1492,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "4imuLGuTxqHn",
-        "outputId": "f8ba4eda-7410-418c-e30f-4aa2600703a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 868
-        }
+        },
+        "outputId": "3850f47f-1843-4fff-f034-13f3d877eb5e"
       },
       "source": [
         "%%sql\n",
         "--Let us view our target list\n",
         "SELECT * FROM Target_List"
       ],
-      "execution_count": 31,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1848,7 +1849,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 18
         }
       ]
     },
@@ -1865,18 +1866,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "JBSLzdWUwWP5",
-        "outputId": "375f4807-69b4-400a-f588-f543e7f39e89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c76764f2-4cce-4a1e-d4a4-0fde25d2a153"
       },
       "source": [
         "%%sql\n",
         "--Let us add the first state for which the running total is larger than the threshold\n",
         "INSERT INTO Target_List(State, GrandElectors, Population, Ratio, Cummulative)\n",
-        "SELECT * FROM Sorted_Cummulative WHERE State='ARIZONA';"
+        "SELECT * FROM Sorted_Cummulative WHERE Cummulative>269 LIMIT 1;"
       ],
-      "execution_count": 35,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1896,7 +1897,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 19
         }
       ]
     },
@@ -1904,18 +1905,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "R7kq4Q3lyfbw",
-        "outputId": "655aa150-9938-43ec-ef1a-cb31aeacec38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 889
-        }
+        },
+        "outputId": "514334b2-85e1-4e34-a7e1-0c6040416e82"
       },
       "source": [
         "%%sql\n",
         "--Let us view the Target List with the additional row\n",
         "SELECT * FROM Target_List"
       ],
-      "execution_count": 36,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -2269,7 +2270,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 20
         }
       ]
     },
@@ -2290,13 +2291,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 93
         },
-        "outputId": "63549636-f443-4e18-86b6-cfcb9b3914d1"
+        "outputId": "969ad548-c655-4124-e52b-cd632ba8c1cc"
       },
       "source": [
         "%%sql\n",
         "SELECT COUNT(State) FROM Target_List;"
       ],
-      "execution_count": 37,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -2330,7 +2331,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 21
         }
       ]
     },
@@ -2347,15 +2348,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "XsliDhqxolXf",
-        "outputId": "57c7a7ed-6060-45e9-ba76-ac7b14127821",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa87f27a-d7cb-44e2-abc0-359390c91ab9"
       },
       "source": [
         "(40/51)*100"
       ],
-      "execution_count": 39,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2367,7 +2368,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 22
         }
       ]
     },
@@ -2397,7 +2398,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     }
   ]
