Added a drive connection

--- a/SQL_MINI_PROJECT.ipynb
+++ b/SQL_MINI_PROJECT.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "SQL MINI-PROJECT.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNz5dmiXgtZG46q6NjpVYv+",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPSFRsW0lamj7tczffipcJF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +31,102 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PPikLkZPUymr"
+        "id": "PPikLkZPUymr",
+        "outputId": "de2547c4-2039-4af6-f28e-859957ca9f60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "#mounting collab on drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wZBajmZqWF2W",
+        "outputId": "7e6a26c5-2ed8-48bf-de23-e738d8fc7e8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#check working directory\n",
+        "!pwd"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "38a3KQ5GWdQf"
+      },
+      "source": [
+        "#changing to working directory\n",
+        "root_dir = '/content/drive/MyDrive'\n",
+        "project_folder = '/content/drive/MyDrive/SQL-DATA'"
+      ],
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Czx5HsjWp-7"
+      },
+      "source": [
+        "#importation of libraries\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "os.chdir(root_dir)\n",
+        "os.chdir(project_folder)"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wyASAgXHW7AK",
+        "outputId": "6dec806e-55ed-4dcd-cb2b-c6000d3f58d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pwd"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/MyDrive/SQL-DATA\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -55,7 +145,7 @@
           "height": 35
         },
         "id": "l2NYNiXiVSYq",
-        "outputId": "1d78a2e5-19a4-4520-f644-a0624b6d408c"
+        "outputId": "3049d5d4-bd17-421f-fbca-02ce6cd46ab6"
       },
       "source": [
         "#load the sql extension\n",
@@ -63,7 +153,7 @@
         "#create a temporary connection of sqlite\n",
         "%sql sqlite://"
       ],
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,7 +168,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 7
         }
       ]
     },
@@ -90,18 +180,17 @@
           "height": 225
         },
         "id": "baRFml3jVvSz",
-        "outputId": "ee88dc27-63b5-4a81-fb96-c408d066df0c"
+        "outputId": "d0152b5b-c0de-4bff-963b-49865be395c6"
       },
       "source": [
-        "#import packages and read pandas dataframe in an sql table\n",
-        "import pandas as pd\n",
+        "#open the data files using python, read with pandas and store in sql table\n",
         "with open('GrandElectors_by_state.csv','r') as f:\n",
         "  Grand_Electors=pd.read_csv(f, index_col=0, encoding='utf-8')\n",
         "%sql DROP TABLE IF EXISTS Grand_Electors;\n",
         "%sql PERSIST Grand_Electors;\n",
         "%sql SELECT * FROM Grand_Electors LIMIT 5;"
       ],
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +249,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 8
         }
       ]
     },
@@ -172,7 +261,7 @@
           "height": 225
         },
         "id": "lR8c4UbxWgZN",
-        "outputId": "08893b4e-b0b6-443b-edd2-9bf4cf248886"
+        "outputId": "be17e980-af18-4d1d-e11a-9d02b5de8eb6"
       },
       "source": [
         "#open the population csv with pandas and store and read the dataframe using sql table\n",
@@ -182,7 +271,7 @@
         "%sql PERSIST Population;\n",
         "%sql SELECT * FROM Population LIMIT 5;"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +330,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -258,7 +347,7 @@
         "# capitalize the states in the Grand_Electors table so as to enable an inner join\n",
         "%sql UPDATE Grand_Electors SET State=UPPER(State);"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +387,7 @@
         "SELECT * FROM Grand_Electors\n",
         "INNER JOIN Population  on Population.State = Grand_Electors.State;"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +426,7 @@
         "--view the combined table\n",
         "SELECT * FROM Combined LIMIT 5;"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +522,7 @@
         "--finally we will alter the new table's name and give it the name Combined\n",
         "ALTER TABLE Combined_new RENAME TO Combined;"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +564,7 @@
         "--view the table combined\n",
         "SELECT * FROM Combined LIMIT 5;"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +655,7 @@
         "SET State='DC'\n",
         "WHERE State='DISTRICT OF COLUMBIA'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +708,7 @@
         "--Rename the new table with ratio column as Combined\n",
         "ALTER TABLE Combined_new Rename to Combined;"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,7 +749,7 @@
         "--Let us view the table with the new ratio column\n",
         "SELECT * FROM Combined LIMIT 5;"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +845,7 @@
         "SELECT * FROM Combined\n",
         "ORDER BY Ratio DESC;"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,7 +884,7 @@
         "--let us view the new table with ratio sorted in decreasing order\n",
         "SELECT * FROM Sorted LIMIT 5;"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -894,7 +983,7 @@
         "FROM Sorted as t\n",
         "Group By t.Ratio ORDER BY t.Ratio DESC;"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,7 +1022,7 @@
         "--Let us view the first 5 columns of the new table with the cummulative sum.\n",
         "SELECT * FROM Sorted_Cummulative;"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,7 +1491,7 @@
         "%%sql\n",
         "SELECT SUM(GrandElectors)/2 FROM Sorted_Cummulative;"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1444,17 +1533,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "iw9FjOwor4RO",
-        "outputId": "e4ad20d6-08b2-4d10-f426-60d41a37b995",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "e4ad20d6-08b2-4d10-f426-60d41a37b995"
       },
       "source": [
         "%%sql\n",
         "SELECT State,GrandElectors FROM Sorted_Cummulative WHERE GrandElectors= (SELECT MAX(GrandElectors) FROM Sorted_Cummulative);"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1498,17 +1587,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "WwZP2C2isayN",
-        "outputId": "1b8fba09-9887-4999-e511-458d4aefe5de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
-        }
+        },
+        "outputId": "1b8fba09-9887-4999-e511-458d4aefe5de"
       },
       "source": [
         "%%sql\n",
         "SELECT State,GrandElectors FROM Sorted_Cummulative WHERE GrandElectors= (SELECT MIN(GrandElectors) FROM Sorted_Cummulative);"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1587,17 +1676,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "HP-rWrTevuc2",
-        "outputId": "e8b843df-2609-4462-9f8b-1098f2d84de1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "e8b843df-2609-4462-9f8b-1098f2d84de1"
       },
       "source": [
         "%%sql\n",
         "SELECT State,Population FROM Sorted_Cummulative WHERE Population= (SELECT MIN(Population) FROM Sorted_Cummulative);"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1641,17 +1730,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "zsM9VpgSv6Bu",
-        "outputId": "37f14123-4eb1-41ce-d785-b52838d76b30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "37f14123-4eb1-41ce-d785-b52838d76b30"
       },
       "source": [
         "%%sql\n",
         "SELECT State,Population FROM Sorted_Cummulative WHERE Population= (SELECT MAX(Population) FROM Sorted_Cummulative);"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1695,17 +1784,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "wyL7Jeh6xZJp",
-        "outputId": "8871569e-9c4d-4305-c7d6-a4a1b0cd4fb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "8871569e-9c4d-4305-c7d6-a4a1b0cd4fb1"
       },
       "source": [
         "%%sql\n",
         "SELECT AVG(GrandElectors) FROM Sorted_Cummulative;"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1747,17 +1836,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "qaH8EC4eyK9O",
-        "outputId": "52fa0154-ac02-4961-d03f-c25795422e4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "52fa0154-ac02-4961-d03f-c25795422e4d"
       },
       "source": [
         "%%sql\n",
         "SELECT AVG(Population) FROM Sorted_Cummulative;"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1799,18 +1888,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "DxogquecylR7",
-        "outputId": "7be62d01-9890-422b-91c1-612e956b0ee9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "7be62d01-9890-422b-91c1-612e956b0ee9"
       },
       "source": [
         "%%sql\n",
         "SELECT State, Population FROM Sorted_Cummulative\n",
         "WHERE Population>=(SELECT AVG(Population) FROM Sorted_Cummulative);"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1934,11 +2023,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "HnMx4uD51nDo",
-        "outputId": "c2377eb9-082c-460c-c264-674c5bf948c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "c2377eb9-082c-460c-c264-674c5bf948c8"
       },
       "source": [
         "%%sql\n",
@@ -1949,7 +2038,7 @@
         "OFFSET (SELECT COUNT(*)\n",
         "        FROM Sorted_Cummulative) / 2"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2000,11 +2089,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "TfV_mqe-AYUA",
-        "outputId": "123687d8-56de-4af1-bcb6-9c6fed718383",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 460
-        }
+        },
+        "outputId": "123687d8-56de-4af1-bcb6-9c6fed718383"
       },
       "source": [
         "%%sql\n",
@@ -2013,7 +2102,7 @@
         "GROUP BY GrandElectors\n",
         "ORDER BY Frequency Desc;"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2166,7 +2255,7 @@
         "CREATE TABLE Target_List AS\n",
         "SELECT * FROM Sorted_Cummulative WHERE Cummulative<=269;"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2205,7 +2294,7 @@
         "--Let us view our target list\n",
         "SELECT * FROM Target_List"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2579,7 +2668,7 @@
         "INSERT INTO Target_List(State, GrandElectors, Population, Ratio, Cummulative)\n",
         "SELECT * FROM Sorted_Cummulative WHERE Cummulative>269 LIMIT 1;"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2618,7 +2707,7 @@
         "--Let us view the Target List with the additional row\n",
         "SELECT * FROM Target_List"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2999,7 +3088,7 @@
         "%%sql\n",
         "SELECT COUNT(State) FROM Target_List;"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3058,7 +3147,7 @@
       "source": [
         "(40/51)*100"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3096,17 +3185,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "Zyg0gntM2KLz",
-        "outputId": "b0612008-ca3e-414b-dcf9-56bfbce642c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
-        }
+        },
+        "outputId": "b0612008-ca3e-414b-dcf9-56bfbce642c6"
       },
       "source": [
         "%%sql\n",
         "SELECT SUM(GrandElectors) FROM Target_List;"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
